# EurorackSoundbar

./: LICENSE.md  README.md  index.html
AK4556/: CodecModule.kicad_pcb  CodecModule.kicad_prl  CodecModule.kicad_pro  CodecModule.kicad_sch  CodecModule.sch  Yummy AD-DA Cookie | Hackaday.io.webloc  https--datasheet.octopart.com-AK4556VTP-E2-AKM-Semiconductor-datasheet-14434097.pdf.webloc
AK4556/gerbers/: CodecModule-B_Cu.gbl  CodecModule-B_Mask.gbs  CodecModule-B_Silkscreen.gbo  CodecModule-Edge_Cuts.gm1  CodecModule-F_Cu.gtl  CodecModule-F_Mask.gts  CodecModule-F_Silkscreen.gto  CodecModule-NPTH.drl  CodecModule-PTH.drl
MacOS/audio2midi/: CMakeLists.txt
MacOS/audio2midi/src/: main.cpp
arduino/InputModule/: InputModule.ino
arduino/Teensy40/InputModule/: OLEDscope_v1.h
arduino/Teensy40/interface_5x5_audio/: interface_5x5_audio.ino
arduino/Teensy40/interface_5x5_audio_1in_1out/: interface_5x5_audio_1in_1out.ino
illustrations/: Daisy MUX.webloc
schemas/: Eurorack_MIDI_Teensy_5x5.txt
tools/: AsciiCAD_catalog.js  PIANO_KEYS_ST7789_v2.html  TOOLS_CATALOG.html  bezier_experiment.html  exponential_curve_experiment.html  img2disp_SSD1309.html
tools/AsciiCAD_helper_tools/: README.md  UTF8_bitmapper_v3.html
